--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Centered X</title>
+  <title>Centered Algebraic X</title>
+  <!-- Import Lora font from Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -14,7 +16,8 @@
       height: 100vh;
       color: black;
       font-size: 100px;
-      font-family: serif;
+      font-family: 'Lora', serif;
+      font-style: italic;
     }
   </style>
 </head>
