--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      color: black;
-      font-size: 100px;
+      color: white;
+      font-size: 70px;
       font-family: 'Lora', serif;
       font-style: italic;
     }
