--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      color: white;
+      color: black;
       font-size: 70px;
       font-family: 'Lora', serif;
       font-style: italic;
