--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>XT</title>
-  <!-- Import Lora font from Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
   <style>
     body {
@@ -18,10 +17,29 @@
       font-size: 70px;
       font-family: 'Lora', serif;
       font-style: italic;
+      overflow: hidden;
+    }
+
+    .crazy-x {
+      cursor: pointer;
+      transition: transform 0.2s ease-in-out;
+    }
+
+    .crazy-x:hover {
+      animation: goCrazy 0.6s infinite;
+    }
+
+    @keyframes goCrazy {
+      0%   { transform: rotate(0deg) scale(1) translate(0, 0); }
+      25%  { transform: rotate(20deg) scale(1.3) translate(5px, -5px); }
+      50%  { transform: rotate(-20deg) scale(0.8) translate(-5px, 5px); }
+      75%  { transform: rotate(15deg) scale(1.2) translate(10px, -10px); }
+      100% { transform: rotate(0deg) scale(1) translate(0, 0); }
     }
   </style>
 </head>
 <body>
-  x
+  <div class="crazy-x">x</div>
 </body>
 </html>
+
