--- a/index.html
+++ b/index.html
@@ -9,37 +9,65 @@
     body {
       margin: 0;
       background-color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      color: black;
-      font-size: 70px;
-      font-family: 'Lora', serif;
-      font-style: italic;
       overflow: hidden;
+      height: 100vh;
+      width: 100vw;
+      position: relative;
+      font-family: 'Lora', serif;
     }
 
     .crazy-x {
+      font-size: 70px;
+      font-style: italic;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       cursor: pointer;
-      transition: transform 0.2s ease-in-out;
+      transition: transform 0.3s ease, top 0.3s ease, left 0.3s ease;
+      user-select: none;
     }
 
-    .crazy-x:hover {
-      animation: goCrazy 0.6s infinite;
+    .crazy-x.animate {
+      animation: wiggle 0.3s ease-in-out;
     }
 
-    @keyframes goCrazy {
-      0%   { transform: rotate(0deg) scale(1) translate(0, 0); }
-      25%  { transform: rotate(20deg) scale(1.3) translate(5px, -5px); }
-      50%  { transform: rotate(-20deg) scale(0.8) translate(-5px, 5px); }
-      75%  { transform: rotate(15deg) scale(1.2) translate(10px, -10px); }
-      100% { transform: rotate(0deg) scale(1) translate(0, 0); }
+    @keyframes wiggle {
+      0%   { transform: translate(-50%, -50%) rotate(0deg) scale(1); }
+      25%  { transform: translate(-50%, -50%) rotate(20deg) scale(1.3); }
+      50%  { transform: translate(-50%, -50%) rotate(-20deg) scale(0.8); }
+      75%  { transform: translate(-50%, -50%) rotate(15deg) scale(1.2); }
+      100% { transform: translate(-50%, -50%) rotate(0deg) scale(1); }
     }
   </style>
 </head>
 <body>
-  <div class="crazy-x">x</div>
+  <div class="crazy-x" id="crazyX">x</div>
+
+  <script>
+    const crazyX = document.getElementById('crazyX');
+
+    crazyX.addEventListener('mouseenter', () => {
+      // Add wiggle animation class
+      crazyX.classList.add('animate');
+
+      // Move to random position after short delay (for wiggle effect)
+      setTimeout(() => {
+        const padding = 100; // keep some padding so x doesn't get cut off
+        const maxX = window.innerWidth - padding;
+        const maxY = window.innerHeight - padding;
+        const newX = Math.random() * maxX;
+        const newY = Math.random() * maxY;
+
+        crazyX.style.left = `${newX}px`;
+        crazyX.style.top = `${newY}px`;
+
+        // Remove animation class to allow re-triggering
+        crazyX.classList.remove('animate');
+      }, 300); // match wiggle duration
+    });
+  </script>
 </body>
 </html>
+
 
