--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 <body>
   <main>
     <h1 class="logo"><span class="x-italic">x</span>tutor</h1>
-    <p class="tagline">Still looking for <span class="x-italic">x</span>?</p>
+    <p class="tagline">Solve for <span class="x-italic">x</span>?</p>
   </main>
 
-  <div class="copyright">©</div>
+  <div class="copyright">© xtutor.ai , 2025</div>
 </body>
 </html>
