--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <style>
     :root{
-      --blue: #0868d3; /* updated blue */
+      --blue: #0868d3; /* brand blue */
 
       /* Uniform, subtle grid */
       --grid: rgba(255,255,255,0.045);
@@ -53,9 +53,9 @@
       transform: translateX(-50%);
       font-size: clamp(12px, 1vw, 16px);
       font-weight: 400;
-      opacity: 0.6; /* less visible */
+      opacity: 0.4; /* faint */
       color: #ffffff;
-      text-shadow: 0 2px 4px rgba(0,0,0,0.35);
+      text-shadow: 0 1px 3px rgba(0,0,0,0.25);
       font-family: "Montserrat", sans-serif;
     }
 
@@ -66,17 +66,18 @@
       font-weight: 400;
       font-size: var(--logo-size);
       line-height: 1.05;
-      /* stronger, more visible shadow */
-      text-shadow: 0 4px 10px rgba(0,0,0,0.5), 0 2px 4px rgba(0,0,0,0.4);
+      /* soft, parent-friendly visibility */
+      text-shadow: 
+        0 3px 8px rgba(0,0,0,0.25),   /* gentle dark blur */
+        0 0 6px rgba(255,255,255,0.2); /* subtle white glow */
     }
     .x-italic{ font-style: italic; }
 
     .tagline{
-      margin: clamp(4px, 0.6vw, 7px) 0 0; /* 30% closer */
+      margin: clamp(4px, 0.6vw, 7px) 0 0; /* closer to logo */
       font-size: var(--tagline-size);
       font-weight: 400;
-      /* slightly stronger shadow */
-      text-shadow: 0 3px 6px rgba(0,0,0,0.45);
+      text-shadow: 0 2px 6px rgba(0,0,0,0.25); /* softer than logo */
     }
 
     .copyright{
@@ -88,7 +89,7 @@
       font-weight: 400;
       opacity: 0.55;
       font-size: clamp(18px, 1.6vw, 24px);
-      text-shadow: 0 2px 6px rgba(0,0,0,0.4);
+      text-shadow: 0 1px 3px rgba(0,0,0,0.25);
       user-select: none;
     }
   </style>
