--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
 
     main { transform: translateY(-2vh); }
 
-    .logo{
-      margin: 0;
-      font-weight: 400;
-      font-size: var(--logo-size);
-      line-height: 1.05;
-      text-shadow: 0 2px 6px rgba(0,0,0,0.25); /* subtle, balanced shadow */
-    }
+  .logo{
+  margin: 0;
+  font-weight: 400;
+  font-size: var(--logo-size);
+  line-height: 1.05;
+  /* updated shadow: softer blur + a bit darker */
+  text-shadow: 0 3px 8px rgba(0,0,0,0.35);
+}
     .x-italic{ font-style: italic; }
 
     .tagline{
